2006-03-15  Jerry James  <james@xemacs.org>

	* newcomment.el (uncomment-region): Remove old code that breaks
	uncomment-region on C files.  Thanks to Christian Podlasly for the
	report.

2006-03-15  Jerry James  <james@xemacs.org>

	* register.el (describe-register-1): Use set-text-properties
	instead of the nonexistent remove-list-of-text-properties.

2006-03-14  Jerry James  <james@xemacs.org>

	* wid-edit.el (widget-move-and-invoke): New function, used by Gnus.

2006-02-26  Vin Shelton  <acs@xemacs.org>

	* setup-paths.el (paths-emacs-data-root-p): Add search for package
	root.
	(paths-find-invocation-roots): Add root-p parameter to test
	plausibility of the roots.

2006-03-12  Marcus Crestani  <crestani@xemacs.org>

	* diagnose.el (show-memory-usage): Fix regexp.

2006-02-26  Mike Sperber  <mike@xemacs.org>

	* lisp-mode.el (lisp-send-defun): Remove this function; the
	definition here didn't do anything---once upon a time, it may have
	gotten overwritten by some code that has evaporated since then.

2006-02-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.25 "eggplant" is released.

2006-02-05  Aidan Kehoe  <kehoea@parhasard.net>

	* easymenu.el: Update copyright. 
	* easymenu.el (easy-menu-all-popups):
	Add a docstring. 
	* easymenu.el (easy-menu-add):
	Document a bug, rework the function to preserve any existing
	non-default mode-popup-menu instead of overwriting it, and not to
	bother normalising the menu title (nothing else does).
	* easymenu.el (easy-menu-remove):
	Restore the default mode-popup-menu instead of leaving an empty
	one when we remove the last easy-menu popup. 

2004-01-19  Martin Buchholz  <martin@xemacs.org>

	* font-lock.el: Add support for not-so recent changes in Java to
	java-mode.

2006-01-08  Aidan Kehoe  <kehoea@parhasard.net>

	* cmdloop.el (read-quoted-char):
	Eliminate some char/event confusion introduced by a GNU Emacs
	sync.
	
2006-01-06  Adrian Aichner  <adrian@xemacs.org>
